07_retirement/grade.txt
Grading at Tue Sep  8 17:44:38 UTC 2020
Attempting to compile retirement.c
retirement.c: In function ‘compute_balance’:
retirement.c:13:40: error: expected ‘;’ before ‘)’ token
   return balance*(1 +rate_of_return/12)) + contribution;
                                        ^
retirement.c:13:40: error: expected statement before ‘)’ token
retirement.c:13:42: error: statement with no effect [-Werror=unused-value]
   return balance*(1 +rate_of_return/12)) + contribution;
                                          ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
